[package]
name = "fretboard-trainer"
version = "0.1.0"
authors = ["Eshref Yozdemir <eshrefyoz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rustfft = "6.0"
realfft = "2.0"
cpal = { version = "0.13.3", features = ["jack"] }
csv = "1.1"
rand = "0.8"
serde = { version = "1", features = ["derive"]}
config = "0.11"
statrs = "0.13"
minifb = "0.13"
plotters = { version = "0.3", default_features = false, features = ["ttf", "line_series"] }
plotters-bitmap = { version = "0.3", default_features = false }
