[package]
name = "libreguitar"
version = "0.1.0"
authors = ["Eshref Yozdemir <eshrefyoz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rustfft = "6.0"
realfft = "2.0"
csv = "1.1"
rand = "0.8"
serde = { version = "1", features = ["derive"]}
config = "0.11"
statrs = "0.13"
console = "0.14"
minifb = { version = "0.13", optional = true }
plotters = { version = "0.3", default_features = false, features = ["ttf", "line_series"], optional = true}
plotters-bitmap = { version = "0.3", default_features = false, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.13.3", default_features = false}

[target.'cfg(target_os = "linux")'.dependencies]
cpal = { version = "0.13.3", default_features = false, features = ["jack"] }

[features]
default = []
gui = ["minifb", "plotters", "plotters-bitmap"]
